--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "authenticationapi",
+  "name": "users-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:css": "tailwindcss -i ./app/styles.css -o ./app/output.css --watch",
+    "start": "concurrently \"node api.js\" \"npm run build:css\""
   },
   "keywords": [],
   "author": "Hector S Lazcano",
@@ -14,5 +16,11 @@
     "express": "^4.21.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.2",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17"
   }
 }
